# ChangeLog for dev-perl/Eidetic
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Eidetic/ChangeLog,v 1.12 2008/08/06 16:42:34 cardoe Exp $

  06 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

  14 Jul 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Assigning dev-perl/Eidetic to perl-herd, as chriswhite has been retired
  (#56211).

  03 Mar 2007; Marius Mauch <genone@gentoo.org> Eidetic-2.003003.ebuild:
  Replacing einfo with elog

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Eidetic-2.003003.ebuild:
  Ebuild maintenance

  23 Nov 2006; Francesco Riosa <vivo@gentoo.org> Eidetic-2.003003.ebuild:
  dev-db/mysql => virtual/mysql

  22 Oct 2006; <vivo@gentoo.org> Eidetic-2.003003.ebuild:
  stabled on "x86" and "amd64" needed to fix rackview and bug #43824

  11 Sep 2006; Michael Cummings <mcummings@gentoo.org>
  Eidetic-2.003003.ebuild:
  Keywording ~amd64

  04 Jul 2006; Christian Hartmann <ian@gentoo.org> Eidetic-2.003003.ebuild:
  Fixed RDEPEND wrt bug #134781

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> Eidetic-2.003003.ebuild:
  Mark 2.003003 ~ia64

  23 Mar 2006; Michael Cummings <mcummings@gentoo.org>
  Eidetic-2.003003.ebuild:
  Bug 119618 - thanks Ken and Henrik for noticing crypt-smbhash was missing as
  a dep

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  Eidetic-2.003003.ebuild:
  Virtuals for perl-core

*Eidetic-2.003003 (04 Nov 2005)

  04 Nov 2005; Chris White <chriswhite@gentoo.org>
  +files/Eidetic-2.003003-destdir.patch, +files/Eidetic-2.003003-sql.patch,
  +metadata.xml, +Eidetic-2.003003.ebuild:
  Initial import into the tree to meet rackview depend.
