@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Eidetic/Attic/Eidetic-2.003003.ebuild,v 1.11 2007/03/03 23:39:42 genone Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Eidetic/Attic/Eidetic-2.003003.ebuild,v 1.12 2009/07/16 11:54:19 tove Exp $
 
 inherit perl-module webapp eutils
 
@@ -25,6 +25,8 @@ DEPEND="dev-lang/perl
 		dev-perl/Crypt-SmbHash
 		mysql? ( virtual/mysql )
 		auth? ( dev-perl/Apache-AuthTicket )"
+
+MAKEOPTS="${MAKEOPTS} -j1"
 
 src_unpack() {
 	unpack ${A}
