@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Eidetic
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Eidetic/ChangeLog,v 1.12 2008/08/06 16:42:34 cardoe Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Eidetic/ChangeLog,v 1.13 2009/07/16 11:54:19 tove Exp $
+
+  16 Jul 2009; Torsten Veller <tove@gentoo.org> Eidetic-2.003003.ebuild:
+  Not parallel make safe (#277670)
 
   06 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
   add GLEP 56 USE flag desc from use.local.desc
